--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </li>
       </div>
         <ul class="toc-footer">
-            <li><a href='https://app.pomelopay.com/'>Start usign Pomelo Pay</a></li>
+            <li><a href='https://app.pomelopay.com/'>Start using Pomelo Pay</a></li>
             <li><small>&copy; Pomelo Pay</small></li>
         </ul>
     </div>
