--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
+        <h2>Pomelo Pay API v1.0 (Deprecated from 31/09/2018)</h2>
 <p>Thanks for using the Pomelo Pay API. It&#39;s a great way to build your applications on top of the Pomelo Pay platform.</p>
 
 <p>We&#39;ve added code bindings for shell scripts, PHP and NodeJS.</p>
