--- a/index.html
+++ b/index.html
@@ -268,8 +268,10 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
+        <aside class="notice">
+Pomelo Pay API v1.0 (Deprecated from 31/09/2018). Visit the new API documentation at <a href="https://github.com/pomelopay/pomelo-connect">https://github.com/pomelopay/pomelo-connect</a>.
+        </aside>
         <h1 id='introduction'>Introduction</h1>
-        <h2>Pomelo Pay API v1.0 (Deprecated from 31/09/2018)</h2>
 <p>Thanks for using the Pomelo Pay API. It&#39;s a great way to build your applications on top of the Pomelo Pay platform.</p>
 
 <p>We&#39;ve added code bindings for shell scripts, PHP and NodeJS.</p>
